pickup location with g api

--- a/rma/templates/rma/details.html
+++ b/rma/templates/rma/details.html
@@ -16,7 +16,7 @@
         <p class="">Motivo: {{ item.reason }}</p>
         {% endif %}
 
-        <p class="">Ponto de Coleta: {{ item.address }}</p>
+        <p class="">Ponto de Coleta: {{ item.pickup_location }}</p>
 
         <p class="">Status: {{ item.status_str }} {{ item.status_date|date:'d/m/Y'}}</p>
     </div>
