--- a/rma/templates/rma/navbar.html
+++ b/rma/templates/rma/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link" href="{% url 'listing' %}">Retornos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="{% url 'pickuplocation_list' %}">Pontos de Coleta</a>
         </li>
       </ul>
       <form class="d-flex">
