--- a/rma/templates/rma/details.html
+++ b/rma/templates/rma/details.html
@@ -42,8 +42,14 @@
 
             <div class="list-group-item">
                 <div class="d-flex justify-content-between align-items-center">
-                    {% if item.pickup_date > now %}
-                    <h6>Coletado</h6>
+                    {% if item.pickup_date %}
+                    <h6>
+                        Coleta
+                        {% if item.pickup_date < now %}
+                        <small class="text-muted">(agendado)</small>
+                        {% endif %}
+
+                    </h6>
                     <p>{{ item.pickup_date|date:"d/m/Y" }}</p>
                     {% else %}
                     <h6 class="text-muted">Coletado</h6>
@@ -53,7 +59,7 @@
 
             <div class="list-group-item">
                 <div class="d-flex justify-content-between align-items-center">
-                    {% if item.return_date > now %}
+                    {% if item.return_date %}
                     <h6>Finalizado</h6>
                     <p>{{ item.return_date|date:"d/m/Y" }}</p>
                     {% else %}
